# picard-plugins-scripts

./: .flake8  .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  .pydocstyle.ini  .yamllint.yaml  README.md  generate.py  install.py  lib.py  plugins.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yaml
plugins/album_track_swap_sort/: album_track_swap_sort.py
plugins/exclude_non_music_tracks/: exclude_non_music_tracks.py
plugins/korean_sort/: korean_sort.py
plugins/separate_catalog_numbers/: separate_catalog_numbers.py
plugins/set_key_from_title_classical/: set_key_from_title_classical.py
plugins/transliteration_sort/: transliteration_sort.py
scripts/: convert_triple_dot_to_ellipsis.ptsp  french_spaces.ptsp  handle_multiple_release_countries.ptsp  set_album_sort_name.ptsp  set_language_to_zxx_if_instrumental.ptsp  set_track_number_for_vinyl.ptsp  typographic_apostrophes.ptsp  unset_sort_field_if_same.ptsp
tests/: conftest.py  test_album_track_swap_sort.py  test_exclude_non_music_tracks.py  test_generate.py  test_install.py  test_korean_sort.py  test_separate_catalog_numbers.py  test_set_key_from_title_classical.py  test_transliteration_sort.py
